# Syntax-Highlighter

./: CMakeLists.txt  DOCUMENTATION.md  README.md  SYNTAX_HIGHLIGHTING_ARTICLE.md  main.cpp  parse_tree.cpp
docs/: API.md  KULLANIM.md
